--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="zipdevil is a Php-based tool for bruit forcing zip  file . using password list, or rockyou.txt or you can create a password list in txt file">
+    <meta name="description" content="zipdevils is a Php-based tool for brut forcing zip  file . using password list, or rockyou.txt or you can create a password list in txt file">
     <meta name="keywords" content="zip file cracking , zip dictionary attack, cybersecurity tool, penetration testing,zip file cracking, file security, file recovery">
     <meta name="author" content="by aka usman Alibaba nigerian ethical hacker">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="zipdevil zip cracking tool">
-    <meta property="og:description" content="zipdevil is a Php-based tool for bruit forcing zip  file  using password list, or rockyou.txt">
+    <meta property="og:title" content="zipdevils zip cracking tool">
+    <meta property="og:description" content="zipdevils is a Php-based tool for brut forcing zip  file  using password list, or rockyou.txt">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yourwebsite.com">
-    <link rel="icon" href="zipdevil.png">
+    <link rel="icon" href="zipdevils.png">
     <title>zipdevil zip bruit force attack tool</title>
     <style>
         body {
@@ -151,7 +151,7 @@
     <section id="download">
         <h2>Download</h2>
         <p>it can run on any platfform that can run php server and zip extension </p>
-        <a href="https://github.com/diraka/dir-aka/raw/refs/heads/main/dir-aka.zip" class="download-btn">Download</a>
+        <a href="https://github.com/zipdevils/zipdevils.github.io/raw/refs/heads/main/zipdevils.zip" class="download-btn">Download</a>
         <p>For more information, visit the <a href="https://github.com/your-repo" target="_blank">GitHub Repository</a>.</p>
     </section>
 
