--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <h2>Download</h2>
         <p>it can run on any platfform that can run php server and zip extension </p>
         <a href="https://github.com/zipdevils/zipdevils.github.io/raw/refs/heads/main/zipdevils.zip" class="download-btn">Download</a>
-        <p>For more information, visit the <a href="https://github.com/your-repo" target="_blank">GitHub Repository</a>.</p>
+        <p>For more information, visit the <a href="https://github.com/zipdevils/zipdevils.github.io" >GitHub Repository</a>.</p>
     </section>
 
 </div>
