--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yourwebsite.com">
     <link rel="icon" href="zipdevils.png">
-    <title>zipdevil zip bruit force attack tool</title>
+    <title>zipdevils zip brut force attack tool</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -85,7 +85,7 @@
 <body>
 
 <header>
-    <h1>zipdevil zip bruit force tool by hackfree</h1>
+    <h1>zipdevils zip bruit force tool by hackfree</h1>
     <p>A Php base tool to crack zip file</p>
 </header>
 
@@ -99,15 +99,15 @@
 <div class="container">
 
     <section id="about">
-        <h2>About zipdevil</h2>
-        <p>zipdevil  is a Php-based security tool designed to crack zip files using bruit force attack. 
+        <h2>About zipdevils</h2>
+        <p>zipdevils  is a Php-based security tool designed to crack zip files using bruit force attack. 
            It helps recover a forgoten password.</p>
     </section>
 
     <section id="features">
         <h2>Key Features</h2>
         <ul>
-            <li>it crack password using dictionary attack.</li>
+            <li>it crack password using brut force attack.</li>
             <li>if the password found in the list it extract the files to (files/) and tell you the exact password if found</li>
             
         </ul>
