--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <body>
 
 <header>
-    <h1>zipdevils zip bruit force tool by hackfree</h1>
+    <h1>zipdevils zip brut force tool by hackfree</h1>
     <p>A Php base tool to crack zip file</p>
 </header>
 
